update ProductService Api