@@ -1,12 +1,15 @@
 package com.notimplement.happygear.service.imp;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -41,9 +44,11 @@ public class ProductServiceImpl implements ProductService{
 	}
 
 	@Override
-	public List<ProductDto> listByPage(Pageable pageable){
-		List<Product> list = repo.findAll(pageable).toList();
-		return list.stream().map(ProductMapper::toProductDto).collect(Collectors.toList());
+	public Map<List<ProductDto>, Integer> listByPage(Pageable pageable){
+		Map<List<ProductDto>, Integer> pair = new HashMap<List<ProductDto>, Integer>();
+		Page<Product> pageList = repo.findAll(pageable);
+		pair.put(pageList.stream().map(ProductMapper::toProductDto).collect(Collectors.toList()),pageList.getTotalPages());
+		return pair;
 	}
 
 	@Override
